--- a/index.html
+++ b/index.html
@@ -501,10 +501,10 @@
                 {
                     question: "피터 드러커가 제시한 개념 중 '효율성'과 관련된 것은 무엇인가요?",
                     options: [
-                        "Doing things right",
-                        "Doing the right things",
-                        "Doing the right things right",
-                        "Doing everything perfectly"
+                        "일을 제대로 하기(Doing things right)",
+                        "옳은 일을 하기(Doing the right things)",
+                        "옳은 일을 제대로 하기(Doing the right things right)",
+                        "모든 일을 완벽히 하기(Doing everything perfectly)"
                     ],
                     correct: 0,
                     explanation: "'Doing things right'는 맡겨진 일을 잘 해내는 효율성(매니지먼트)과 관련이 있습니다. 반면 'Doing the right things'는 효과성(리더십)과 관련됩니다."
@@ -600,10 +600,10 @@
                 {
                     question: "크리스천 리더가 추구해야 할 최고 수준의 개념은?",
                     options: [
-                        "Doing things right",
-                        "Doing the right things",
-                        "Doing the right things right",
-                        "Not doing wrong things"
+                        "일을 제대로 하기(Doing things right)",
+                        "옳은 일을 하기(Doing the right things)",
+                        "옳은 일을 제대로 하기(Doing the right things right)",
+                        "나쁜 일을 하지 않기(Not doing wrong things)"
                     ],
                     correct: 2,
                     explanation: "'Doing the right things right'는 우리가 해야 하는 그 일(하나님이 원하시는 일)을 바르게 해낼 때를 의미합니다. 이것이 크리스천 리더로서 추구해야 할 최고 수준입니다."
