--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>하나님이 기뻐하시는 리더십 퀴즈</title>
+    <title>하나님이 빚으시는 리더십 퀴즈</title>
     <style>
         * {
             margin: 0;
