--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>하나님이 기뻐하시는 리더십</h1>
+            <h1>하나님이 빚으시는 리더십</h1>
             <p>5강 & 6강 학습 퀴즈</p>
             <div class="progress-container">
                 <div class="progress-bar" id="progressBar"></div>
